--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
+    "ngx-countdown-timer": "^0.2.0",
     "react": "^17.0.1",
+    "react-digital-clock": "^0.1.2",
     "react-dom": "^17.0.1",
     "react-scripts": "3.4.4"
   },
